[tool.poetry]
name = "apache-play"
version = "0.1.0"
description = ""
authors = ["dannyolamide <dannyolamide@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
