[tool.poetry]
name = "koshon"
version = "0.1.0"
description = ""
authors = ["dannyolamide <dannyolamide@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.4.0"
streamlit = "^1.33.0"
matplotlib = "^3.8.4"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
